@startuml
!include Sorpresa.puml!SINSUBCLASES

class Favorable{
    - PORCENTAJE: float
    + avanzarEn( Vehiculo v ): Evento
}

class Desfavorable{
    - PORCENTAJE: float
    + avanzarEn( Vehiculo v ): Evento
}
class CambioVehiculo{
    + avanzarEn( Vehiculo v ): Evento
}

Sorpresa <|.. CambioVehiculo
Sorpresa <|.. Favorable
Sorpresa <|.. Desfavorable

@enduml

@startuml(id=SINSUBCLASES)
interface Sorpresa{
    + {abstract} avanzarEn( Vehiculo v ): Evento
}
@enduml

